--- a/final_template/template.xml.j2
+++ b/final_template/template.xml.j2
@@ -360,10 +360,10 @@
 <text top="270" left="72" width="132" height="44" font="6"><a href="#australia">Australia</a></text>
 <button top="360" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="fiji"/>
 <text top="360" left="72" width="40" height="44" font="6"><a href="#fiji">Fiji</a></text>
-<button top="450" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="french-polynesia"/>
-<text top="450" left="72" width="262" height="44" font="6"><a href="#french-polynesia">French Polynesia</a></text>
-<button top="540" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="kiribati"/>
-<text top="540" left="72" width="95" height="44" font="6"><a href="#kiribati">Kiribati</a></text>
+<button top="450" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="kiribati"/>
+<text top="450" left="72" width="95" height="44" font="6"><a href="#kiribati">Kiribati</a></text>
+<button top="540" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="marshall-islands"/>
+<text top="540" left="72" width="262" height="44" font="6"><a href="#marshall-islands">Marshall Islands</a></text>
 <button top="630" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="micronesia"/>
 <text top="630" left="72" width="508" height="44" font="6"><a href="#micronesia">Micronesia (Federated States of)</a></text>
 <button top="720" left="72" width="110" height="44" pr="890" pt="10" pb="25" href="new-zealand"/>
