--- a/final_template/template.xml.j2
+++ b/final_template/template.xml.j2
@@ -627,8 +627,13 @@
 <text top="7023" left="162" width="219" height="64" font="5"><b>education</b></text>
 <text top="7146" left="72" width="613" height="44" font="6">Education is fundamental to a person’s </text>
 <text top="7200" left="72" width="202" height="44" font="6">life chances. </text>
-<text top="7290" left="72" width="684" height="44" font="6">In {{ country.sentencename }} [XX]% of people have </text>
-<text top="7344" left="72" width="640" height="44" font="6">completed secondary school education.</text>
+{% if country.SecondaryCompletion is not none %}
+	<text top="7290" left="72" width="684" height="44" font="6">As of {{ country.nateducYear }}, {{ country.SecondaryCompletion|percent }} of people in {{ country.sentencename }} have </text>
+	<text top="7344" left="72" width="640" height="44" font="6">completed secondary school education.</text>
+{% else %}
+	<text top="7290" left="72" width="684" height="44" font="6">Lorum </text>
+	<text top="7344" left="72" width="640" height="44" font="6">ipsum.</text>
+{% endif %}
 <text top="7428" left="72" width="889" height="48" font="7"><b>percentage who have completed secondary education</b></text>
 <image top="7518" left="74" width="1000" height="550" src="placeholder.png"/>
 <text top="8118" left="72" width="698" height="44" font="6">[XX]% of people in the P20 have completed </text>
